--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
-        body { font-family: 'Inter', sans-serif; }
+        body { font-family: 'Inter', sans-serif; margin: 0; padding: 0; }
         .polaroid-font { font-family: 'Caveat', cursive; }
         
         @media print {
@@ -21,10 +21,9 @@
             #root { width: 100%; }
             .print-a4-page {
                 display: block;
-                width: 19cm; /* Aproximadamente A4 menos margens */
+                width: 19cm;
                 margin: 0 auto;
             }
-            /* Garante que o filtro CSS seja aplicado na impressão */
             * {
                 -webkit-print-color-adjust: exact !important;
                 print-color-adjust: exact !important;
@@ -34,14 +33,22 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
 </head>
 <body class="bg-stone-50 text-stone-900 min-h-screen">
-    <div id="root"></div>
+    <div id="root">
+        <!-- Loader inicial para evitar tela branca pura enquanto o JS carrega -->
+        <div class="flex items-center justify-center min-h-screen">
+            <p class="text-stone-400 font-medium animate-pulse">Carregando Studio...</p>
+        </div>
+    </div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
