refactor: Update app name and print size
Rename project and update metadata to reflect the new application name "Anix Copiadora Polaroid Studio".

Adjust print dimensions from 6x8cm to 7x10cm across the application, including UI elements, styling, and relevant file names.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Polaroid Studio 6x8</title>
+    <title>Anix Copiadora | Polaroid Studio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
@@ -46,7 +46,7 @@
     <div id="root">
         <!-- Loader inicial para evitar tela branca pura enquanto o JS carrega -->
         <div class="flex items-center justify-center min-h-screen">
-            <p class="text-stone-400 font-medium animate-pulse">Carregando Studio...</p>
+            <p class="text-stone-400 font-medium animate-pulse">Carregando Anix Studio...</p>
         </div>
     </div>
     <script type="module" src="./index.tsx"></script>
